kubernetes-manifests/ms-auth.yaml
# kubernetes-manifests/ms-auth.yaml


# 1. Service (ClusterIP)

apiVersion: v1
kind: Service
metadata:
  name: ms-auth-service # Nombre de DNS interno: ms-auth-service
  labels:
    app: ms-auth
spec:
  selector:
    app: ms-auth
  ports:
    - protocol: TCP
      port: 4000 # Puerto del Service
      targetPort: 4000 # Puerto en el contenedor
  type: ClusterIP
---

# 2. Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth-deployment
spec:
  replicas: 1 # Queremos una sola instancia de este servicio, para el momento de la resilencia
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ms-auth 
    spec:
      # --- CORRECCIÓN CLAVE: containers está anidado correctamente bajo spec ---
      containers:
        - name: ms-auth
          image: ms-auth:latest  # Asegúrate que esta imagen exista y sea accesible.
          imagePullPolicy: Never # Añadido para evitar ErrImagePull si la imagen ya está en minikube/Docker.
          ports:
            - containerPort: 4000
