kubernetes-manifests/ms-tutorias.yaml
# kubernetes-manifests/ms-tutorias.yaml

# 1. Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: ms-tutorias-service 
  labels:
    app: ms-tutorias
spec:
  selector:
    app: ms-tutorias
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---

# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-tutorias-deployment
spec:
  replicas: 1 # 
  selector:
    matchLabels:
      app: ms-tutorias
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled 
      labels:
        app: ms-tutorias
    spec:
      containers: 
        - name: ms-tutorias
          image: ms-tutorias:metrics 
          imagePullPolicy: Never
          resources: # <-- OPTIMIZACIÓN DE RECURSOS (RETO 01)
            requests:
              cpu: "250m"  # 0.25 vCPU (25% de un núcleo)
              memory: "128Mi"
            limits:
              cpu: "500m"  # Máximo 0.5 vCPU
              memory: "256Mi"
          ports:
            - containerPort: 3000
