kubernetes-manifests/ingress-rules.yaml
# kubernetes-manifests/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorias-ingress-rules
spec:
  ingressClassName: kong # Indica que Kong debe gestionar estas reglas
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: ms-auth-service
            port:
              number: 4000
      - path: /tutorias
        pathType: Prefix
        backend:
          service:
            name: ms-tutorias-service
            port:
              number: 3000
